fix hero text overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -48,6 +48,10 @@
 
 .hero-size{
 	font-size: 5rem;
+
+    @media screen and (max-width: 600px) {
+        font-size: 3.5rem;
+    }
 }
 
 .accent-font{
